[gd_scene load_steps=10 format=2]

[ext_resource path="res://Stages/Depression/Enemies/TriggerBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Stages/Depression/TriggerTutorial.gd" type="Script" id=2]
[ext_resource path="res://Stages/Depression/TutorialInterface.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 150.0

[sub_resource type="Animation" id=2]

resource_name = "press"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "release"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]

resource_name = "press"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=5]

resource_name = "release"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="TriggerTutorial" instance=ExtResource( 1 )]

pause_mode = 2
script = ExtResource( 2 )
_sections_unfolded = [ "Pause", "Visibility", "Z Index" ]
dies_on_walls = false
sleeping = false

[node name="Sprite" parent="." index="0"]

_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="Area2D" parent="." index="1"]

editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

shape = SubResource( 1 )

[node name="AreaCollision" parent="." index="2"]

editor/display_folded = true

[node name="TutorialInterface" type="Node2D" parent="." index="3"]

visible = false
z_index = -10
script = ExtResource( 3 )
_sections_unfolded = [ "Material", "Pause", "Transform", "Z Index" ]
DEBUG = 0

[node name="ButtonLeft" type="Sprite" parent="TutorialInterface" index="0"]

editor/display_folded = true
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -100, -50 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="TutorialInterface/ButtonLeft" index="0"]

root_node = NodePath("..")
autoplay = "press"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/press = SubResource( 2 )
anims/release = SubResource( 3 )
blend_times = [  ]

[node name="ButtonRight" type="Sprite" parent="TutorialInterface" index="1"]

editor/display_folded = true
position = Vector2( 100, -50 )
z_index = -10
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="TutorialInterface/ButtonRight" index="0"]

root_node = NodePath("..")
autoplay = "release"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/press = SubResource( 4 )
anims/release = SubResource( 5 )
blend_times = [  ]

[node name="Interval" type="Timer" parent="TutorialInterface" index="2"]

process_mode = 1
wait_time = 0.4
one_shot = false
autostart = false

[node name="ShakeTimer" type="Timer" parent="TutorialInterface" index="3"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="Tween" type="Tween" parent="TutorialInterface" index="4"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0


